--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.6",
-    "@babel/plugin-proposal-private-property-in-object": ""
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "tailwindcss": "^3.3.6"
   }
 }
