--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "freezeframe": "^5.0.2",
+    "gifuct-js": "^2.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-freezeframe": "^5.0.2",
@@ -38,7 +40,11 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.3.6"
-  }
+  },
+  "description": "## Tailwind css Tailwind CSS is primarily a utility-first CSS framework designed to assist in the development process. It provides a set of utility classes that you can use to quickly build and style your user interface during development.",
+  "main": "tailwind.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
